Hola hola hola-a-a-a

--- a/crmSystem.csproj
+++ b/crmSystem.csproj
@@ -5,6 +5,12 @@
     <TargetFramework>net472</TargetFramework>
 	<ImplicitUsings>disable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <RunAnalyzersDuringBuild>True</RunAnalyzersDuringBuild>
+    <RunAnalyzersDuringLiveAnalysis>True</RunAnalyzersDuringLiveAnalysis>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>False</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
